[package]
name = "kmppca"
version = "0.1.0"
edition = "2021"

[dependencies]
cfl = {path = "../civm_scan/cfl"}
fft = {path = "../civm_scan/fft"}
image_utils = {path = "../civm_scan/image_utils"}
#ndarray = {version = "0.15.6", features = ["rayon"] }
ndarray-linalg = {version = "0.15.0",features = ["netlib-system"]}
array_utils = {path = "../civm_scan/array_utils"}
rand = "0.8.5"
byte-order = "0.3.0"
indicatif = "0.17.8"
serde = { version = "1.0.210", features = ["derive"] }
bincode = "1.3.3"
clap = "4.5.19"
